data/issues_nolabel/nolabel_test_3381.txt
iOS Example Make Build Error

I am following the iOS static TF build on the "Building By Hand" section found here.  I am running the build command after downloading dependencies and compiling successfully.
When running make -f tensorflow/contrib/makefile/Makefile TARGET=IOS IOS_ARCH=ARM64, there is a generated error that stops the build.
error:statement expression not allowed at file scope

In file included from tensorflow/core/kernels/xent_op.cc:20:
In file included from ./tensorflow/core/kernels/xent_op.h:20:
In file included from ./third_party/eigen3/unsupported/Eigen/CXX11/Tensor:1:
In file included from /Users/michaellee/Code/ios/tensorflow/tensorflow/contrib/makefile/downloads/eigen-eigen-b4fa9622b809/unsupported/Eigen/CXX11/Tensor:14:
In file included from /Users/michaellee/Code/ios/tensorflow/tensorflow/contrib/makefile/downloads/eigen-eigen-b4fa9622b809/unsupported/Eigen/CXX11/../../../Eigen/Core:354:
/Users/michaellee/Code/ios/tensorflow/tensorflow/contrib/makefile/downloads/eigen-eigen-b4fa9622b809/unsupported/Eigen/CXX11/../../../Eigen/src/Core/arch/NEON/Complex.h:286:35: error:
      statement expression not allowed at file scope
static uint64x2_t p2ul_CONJ_XOR = vld1q_u64( p2ul_conj_XOR_DATA );
                                  ^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../lib/clang/7.3.0/include/arm_neon.h:7624:39: note:
      expanded from macro 'vld1q_u64'
#define vld1q_u64(__p0) __extension__ ({ \
                                      ^
1 error generated.
make: *** [/Users/michaellee/Code/ios/tensorflow/tensorflow/contrib/makefile/gen/obj/tensorflow/core/kernels/xent_op.o] Error 1

I have recreated this problem on two different computers, and on a freshly pulled version
Xcode 7.3.1, OS X 10.11.5